[package]
name = "phantom-frame"
version = "0.1.10"
edition = "2021"
authors = ["Erdem Göksel <erdem.goksel.dev@gmail.com>"]
description = "A high-performance prerendering proxy engine with caching support"
license = "MIT"
repository = "https://github.com/ErdemGKSL/phantom-frame"  # EDIT: Update with your actual GitHub username
homepage = "https://github.com/ErdemGKSL/phantom-frame"  # EDIT: Update with your actual GitHub username
documentation = "https://docs.rs/phantom-frame"
readme = "README.md"
keywords = ["proxy", "cache", "prerender", "web", "server"]
categories = ["web-programming", "caching", "network-programming"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio-util = "0.7"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[lib]
name = "phantom_frame"
path = "src/lib.rs"

[[bin]]
name = "phantom-frame"
path = "src/main.rs"
